--- a/css/style.css
+++ b/css/style.css
@@ -5,63 +5,137 @@ body{
 	font-size:125%;
 }
 
+
+/* .skip {
+	visibility: hidden;
+} */
+
+.skip {
+  position: absolute;
+  left: -9999px;
+  z-index: 999;
+  padding: 1em;
+	background-color: white;
+	border: solid black 2px;
+  opacity: 0;
+}
+
+.skip:focus {
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 1;
+}
+
+
+.container {
+	display: grid;
+	grid-template-columns: 30% 40% 30%;
+}
+
+.mini {
+	border: solid black 1px;
+	border-radius: 15px;
+	padding: 10px;
+	padding-top: 7px;
+	margin: 10px;
+}
+
 /*Make the h1 heading bigger with a bold font*/
 h1{
+	margin-top: 25px;
+	text-align: center;
 	font-size: 2em; 
 	font-weight: bold;
 }
 
 .active{
-	background: white;
-    text-transform: uppercase;
-	text-align: center;
+	background: rgb(210, 235, 236);
+	/* border-width: 5px; */
+	border: solid 5px;
+	color: black;
+	text-transform: uppercase;
+}
+
+.active :link {
+	color: black;
 }
 
 .active a{
 	text-decoration: none;;
 }
 
-/*Style the images*/
+.active a:visited{
+	color:black
+}
+
 img{
-    height: 150px;
+	height: 150px;
 	width:auto;
-    border: 3px solid blue;
-    padding: 25px;
-    border-radius: 20px;
-    margin: 5px;
+	border: 3px solid blue;
+	padding: 25px;
+	border-radius: 20px;
+	margin: 5px;
 	margin-left: 10%
 }
 
-/*Make the h2 heading match h1*/
 h2{
-	font-size: 2em; 
+	font-size: 1.75em; 
 	font-weight: bold;
 }
 
-/*Improve the spacing for paragraphs AND headings*/
+h3{
+	margin-top: 5%;
+	margin-bottom: 1%;
+	padding-left: 1%;
+	font-size: 1em; 
+	font-weight: bold;
+}
+
 p, h1, h2 {
     padding: 10px;
 }
 
-/*Add borders around the main components and some
-space too*/
 header, nav, main, footer{
-	border: 3px solid red;
+	/* border: 3px solid red; */
 	margin: 10px 0;
 }
 
 
-/*Change the styling for all of the list 
-items in the nav section*/
 nav ul li{
-	background-color: #ECFF4D;
+	margin-left: 7%;
+	background-color: rgb(253, 253, 253);
+	text-align: center;
 	padding:10px;
 	width:25%;
-	border:1px solid black;
+	border:2px dotted black;
+	border-radius: 5px;
 	display: inline-block;
-	width: 20%;
+	width: 10%;
+	margin-right: 5%;
 }
 
 /*Added this so the links stay the same color*/
 a:visited{color:#0000FF}
 
+footer p, .note {
+	padding-top: 20px;
+  position: relative;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 15px 0;
+
+  text-align: center;
+}
+
+.note {
+	border-radius: 3px;
+	margin-left: 25%;
+	margin-right: 25%;
+	border: solid gray 1px;
+}
+
+.list {
+  list-style-type: circle;
+  padding-left: 5%;
+}
