a few modifications to sizing for mobile view

--- a/css/recipes.css
+++ b/css/recipes.css
@@ -7,14 +7,14 @@
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   /* border: 1px solid rgba(0, 0, 0, 0.8); */
-  padding: 20px;
+  padding: 5%;
   font-size: 30px;
   text-align: center;
 }
 
 .headerItem {
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
+  padding: 5%;
   font-size: 30px;
   text-align: center;
 
@@ -24,7 +24,7 @@
 .smallerItem {
   align-items: left;
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
+  /* padding: 5%; */
   font-size: 30px;
   text-align: center;
 
