--- a/css/recipes.css
+++ b/css/recipes.css
@@ -7,15 +7,15 @@
 .grid-item {
   background-color: rgba(255, 255, 255, 0.8);
   /* border: 1px solid rgba(0, 0, 0, 0.8); */
-  padding: 5%;
-  font-size: 30px;
+  padding: 1%;
+  font-size: 1em;
   text-align: center;
 }
 
 .headerItem {
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 5%;
-  font-size: 30px;
+  padding: 1%;
+  font-size: 1em;
   text-align: center;
 
   grid-column: 1 / span 4;
@@ -25,7 +25,7 @@
   align-items: left;
   background-color: rgba(255, 255, 255, 0.8);
   /* padding: 5%; */
-  font-size: 30px;
+  font-size: 1em;
   text-align: center;
 
   grid-column: 1 / span 2;
@@ -33,17 +33,18 @@
 
 .smallerItem1 {
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
-  font-size: 30px;
-  text-align: center;
+  padding: 1em;
+  font-size: 1em;
+  text-align: left;
 
   grid-column: 3 / span 2;
 }
 
 img{
-	height: 300px;
-	width:auto;
-	border: 1px solid white;
-  padding: 7px;
-	margin: 5px;
+	height: 30vw;
+  width: auto;
+	/* width:25vw; */
+	border: .06vw solid white;
+  padding: 7vw;
+	margin: 5vw;
 }
